--- a/src/_layouts/resume.html
+++ b/src/_layouts/resume.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+
+<!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 {% include head.html %}
-<body>
-    {% include header.html %}
-    <p>{{ site.data.languages[page.lang].label }}</p>
-</body>
+    <body>
+        {% include header.html %}
+        <main class="page-content" aria-label="Content">
+            <div class="wrapper">
+            {{ content }}
+            {% include contact.html %}
+            {% include education.html %}
+            {% include work_experiences.html %}
+            {% include skills.html %}
+            </div>
+        </main>
+    </body>
 </html>
