--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -1,5 +1,47 @@
-.language_button
+// Kindda quick & dirty but it's fine for a resume ¯\_(ツ)_/¯
+// .language_button
+// {
+//     line-height: 54px;
+//     margin-left: 15px;
+// }
+
+main
 {
-    line-height: 54px;
-    margin-left: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+h2
+{
+    font-weight: bold;
+}
+
+h3
+{
+    margin-bottom: 0px;
+    font-weight: bold;
+}
+
+h4
+{
+    margin-bottom: 5px;
+    font-style: italic;
+}
+
+dt
+{
+    font-weight: bold;
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
+dd
+{
+    margin: 0px 0px 0px 40px;
+}
+
+.portrait-img
+{
+    min-width: 150px;
+    max-width: 250px;
 }
