--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,12 +1,41 @@
-<header class="site-header" role="banner">
+<header role="banner">
+  {%- assign default_paths = site.pages | map: "path" -%}
+  {%- assign page_paths = site.header_pages | default: default_paths -%}
+  {%- assign title_language_key = "title_" | append: page.lang -%}
 
-  <div class="wrapper">
-    {%- assign default_paths = site.pages | map: "path" -%}
-    {%- assign page_paths = site.header_pages | default: default_paths -%}
-    {%- assign title_language_key = "title_" | append: page.lang -%}
-    <a class="site-title" rel="author" href="{{ " /" | relative_url }}">{{ site[title_language_key] | escape }}</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light text-dark">
+      <div class="container-fluid">
+        {% for language in site.available_languages %}
+        {% if language != page.lang %}
+        <a href="/{{ language }}" class="language_button">
+          <button class="btn bg-light text-dark">{{ site.data.languages["label"][language] }} {{ site.data.languages["icon"][language] }}</button>
+        </a>
+        <a id="lightSwitch" onclick="onToggleMode(this)"><button class="bg-light text-dark rounded btn">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="25"
+            height="25"
+            fill="currentColor"
+            class="bi bi-brightness-high"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"
+            />
+          </svg>
+        </button></a>
+        {% endif %}
+        {% endfor %}
+      </div>
+    </nav>
 
-    {%- if page_paths -%}
+    <!-- {% for collection in site.sections %}
+    <section>
+        <h1>{{ collection.section }}</h1>
+    </section>
+    {% endfor %} -->
+
+    <!-- {%- if page_paths -%}
     <nav class="site-nav">
       <input type="checkbox" id="nav-trigger" class="nav-trigger" />
       <label for="nav-trigger">
@@ -27,18 +56,7 @@
         {%- endfor -%}
       </div>
     </nav>
-    {%- endif -%}
-    {% for language in site.available_languages %}
-    {% if language != page.lang %}
-      <a href="/{{ language }}" class="language_button">
-        <button >{{ site.data.languages["label"][language] }} {{ site.data.languages["icon"][language] }}</button>
-      </a>
-    {% endif %}
-    {% endfor %}
-    <!-- {% for collection in site.sections %}
-    <section>
-        <h1>{{ collection.section }}</h1>
-    </section>
-    {% endfor %} -->
+    {%- endif -%} -->
+
   </div>
 </header>
