--- a/src/_layouts/resume.html
+++ b/src/_layouts/resume.html
@@ -4,16 +4,22 @@
 <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+<!-- JS theme_switch -->
+<script src="/assets/js/theme_switch.js"></script>
+
 {% include head.html %}
-    <body>
+    <body class="bg-light text-dark">
         {% include header.html %}
-        <main class="page-content" aria-label="Content">
-            <div class="wrapper">
+        <div class="background">
+        </div>
+        <main class="page-content border border-3 rounded" aria-label="Content">
+            <div class="wrapper bg-light">
             {{ content }}
             {% include contact.html %}
             {% include education.html %}
             {% include work_experiences.html %}
             {% include skills.html %}
+            {% include about_me.html %}
             </div>
         </main>
     </body>
