--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -5,10 +5,16 @@
 //     margin-left: 15px;
 // }
 
+html {
+    font-size: 0.75rem;
+}
+
 main
 {
     margin-left: auto;
     margin-right: auto;
+    padding: 0 !important;
+    background-color: white;
 }
 
 h2
@@ -19,7 +25,7 @@ h2
 h3
 {
     margin-bottom: 0px;
-    font-weight: bold;
+    text-decoration: underline;
 }
 
 h4
@@ -44,4 +50,17 @@ dd
 {
     min-width: 150px;
     max-width: 250px;
+}
+
+.background
+{
+    background-color: bisque;
+    height: 100%;
+    width: 100vw;
+    z-index: -1;
+    position: relative;
+}
+
+#lightSwitch {
+    cursor: pointer;
 }
