--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -1,20 +1,69 @@
-// Kindda quick & dirty but it's fine for a resume ¯\_(ツ)_/¯
-// .language_button
-// {
-//     line-height: 54px;
-//     margin-left: 15px;
-// }
-
-html {
-    font-size: 0.75rem;
+@media print {
+    main
+    {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+        max-width: none !important;
+    }
+    .portrait-img
+    {
+        max-height: 200px;
+    }
 }
 
 main
 {
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0 !important;
-    background-color: white;
+    max-width: 850px;
+}
+
+@media (max-width: 850px)
+{
+    html {
+        font: 0.8rem var(--bs-font-sans-serif);
+    }
+}
+
+@media (min-width: 850px)
+{
+    main
+    {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    html {
+        font: 1rem var(--bs-font-sans-serif);
+    }
+}
+
+@media (min-width: 1200px)
+{
+    html {
+        font: 1.2rem var(--bs-font-sans-serif);
+    }
+
+    main
+    {
+        max-width: 1000px;
+    }
+}
+
+@media (min-width: 1400px)
+{
+    html {
+        font: 1.3rem var(--bs-font-sans-serif);
+    }
+
+    main
+    {
+        max-width: 1200px;
+    }
+}
+
+.main-resume
+{
+    padding-left: 5%;
+    padding-right: 5%
 }
 
 h2
@@ -24,14 +73,8 @@ h2
 
 h3
 {
-    margin-bottom: 0px;
-    text-decoration: underline;
-}
-
-h4
-{
     margin-bottom: 5px;
-    font-style: italic;
+    text-decoration: underline;
 }
 
 dt
@@ -51,10 +94,18 @@ a
     font-weight: bold;
 }
 
+.col
+{
+    padding-left: 0;
+    padding-right: 0;
+}
+
 .portrait-img
 {
     min-width: 150px;
-    max-width: 250px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .background
