CSS seems fine on mobile + printing seems fine (via chrome, RIP wkhtmltopdf)

--- a/src/_layouts/resume.html
+++ b/src/_layouts/resume.html
@@ -5,14 +5,18 @@
 
 <body class="bg-light text-dark">
     {% include header.html %}
-    <main class="page-content border border-3 rounded" aria-label="Content">
-        <div class="wrapper bg-light main-resume">
-            {{ content }}
-            {% include contact.html %}
-            {% include education.html %}
-            {% include work_experiences.html %}
-            {% include skills.html %}
-            {% include about_me.html %}
+    <main class="page-content " aria-label="Content">
+        <div class="wrapper bg-light main-resume row">
+            <div class="col-sm col-sm-4 bg-dark text-light left_part_resume">
+                {% include contact.html %}
+                {% include about_me.html %}
+            </div>
+            <div  class="col-sm col-sm-8 right_part_resume">
+                {{ content }}
+                {% include work_experiences.html %}
+                {% include education.html %}
+                {% include skills.html %}
+            </div>
         </div>
     </main>
     <!-- JS theme_switch -->
