--- a/src/_includes/about_me.html
+++ b/src/_includes/about_me.html
@@ -1,25 +1,27 @@
 {%- assign language = page.lang -%}
 
-<h2>{{ site.data.about_me["section_title"][language] }}</h2>
+<div class="container-md col" style="text-align: center; overflow-wrap: break-word;">
+    <h2>{{ site.data.about_me["section_title"][language] }}</h2>
 
-<div class="container">
-    <div class="row justify-content-evenly">
-        <div class="col col-5">
-            <h3 class="text-center">{{ site.data.about_me["languages_subsection"][language] }}</h3>
-            <ul>
-                {%- for language_object in site.data.about_me["languages_list"] -%}
-                <li>{{ language_object[1]["icon"] }} {{ language_object[1]["name"][language] }}: {{
-                    language_object[1]["skill"][language] }}</li>
-                {%- endfor -%}
-            </ul>
-        </div>
-        <div class="col col-5">
-            <h3 class="text-center">{{ site.data.about_me["hobbies_subsection"][language] }}</h3>
-            <ul>
-                {%- for hobby in site.data.about_me["hobbies_list"][language] -%}
-                <li>{{ hobby }}</li>
-                {%- endfor -%}
-            </ul>
+    <div class="container">
+        <div class="row justify-content-evenly">
+            <div class="col">
+                <h3 class="text-center">{{ site.data.about_me["languages_subsection"][language] }}</h3>
+                <ul>
+                    {%- for language_object in site.data.about_me["languages_list"] -%}
+                    <li>{{ language_object[1]["icon"] }} {{ language_object[1]["name"][language] }}: {{
+                        language_object[1]["skill"][language] }}</li>
+                    {%- endfor -%}
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="text-center">{{ site.data.about_me["hobbies_subsection"][language] }}</h3>
+                <ul>
+                    {%- for hobby in site.data.about_me["hobbies_list"][language] -%}
+                    <li>{{ hobby }}</li>
+                    {%- endfor -%}
+                </ul>
+            </div>
         </div>
     </div>
 </div>
