--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -3,14 +3,14 @@
   {%- assign page_paths = site.header_pages | default: default_paths -%}
   {%- assign title_language_key = "title_" | append: page.lang -%}
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light text-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light no-theme-switch">
       <div class="container-fluid">
         {% for language in site.available_languages %}
         {% if language != page.lang %}
         <a href="/{{ language }}" class="language_button">
-          <button class="btn bg-light text-dark">{{ site.data.languages["label"][language] }} {{ site.data.languages["icon"][language] }}</button>
+          <button class="btn bg-dark text-light no-theme-switch">{{ site.data.languages["label"][language] }} {{ site.data.languages["icon"][language] }}</button>
         </a>
-        <a id="lightSwitch" onclick="onToggleMode(this)"><button class="bg-light text-dark rounded btn">
+        <a id="lightSwitch" onclick="onToggleMode(this)"><button class="bg-dark text-light rounded btn no-theme-switch">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="25"
