--- a/src/_layouts/resume.html
+++ b/src/_layouts/resume.html
@@ -19,7 +19,8 @@
             </div>
         </div>
     </main>
+    <!-- There was a notion of theme before, not used anymore -->
     <!-- JS theme_switch -->
-    <script src="../assets/js/theme_switch.js" defer></script>
+    <!-- <script src="../assets/js/theme_switch.js" defer></script> -->
 </body>
 </html>
