Small adjustments in CSS for printing

--- a/src/_includes/about_me.html
+++ b/src/_includes/about_me.html
@@ -1,6 +1,6 @@
 {%- assign language = page.lang -%}
 
-<div class="container-md col" style="text-align: center; overflow-wrap: break-word;">
+<div class="container col left_part_resume_content">
     <h2>{{ site.data.about_me["section_title"][language] }}</h2>
 
     <div class="container">
