--- a/src/_includes/contact.html
+++ b/src/_includes/contact.html
@@ -1,6 +1,6 @@
 {%- assign language = page.lang -%}
 
-<div class="container-md col" style="text-align: center; overflow-wrap: break-word;">
+<div class="container col left_part_resume_content">
     <h2 class="mb-4" style="text-align: center;">{{ site.data.contact["name"] }}</h2>
     <div class="mb-3">
         <div>{{ site.data.contact["age_text"][language] }}: <span id="age"></span> ans</div>
@@ -20,7 +20,7 @@
                 <span class="username">{{ site.github_username| escape }}</span></a>
         </div>
     </div>
-    <img class="rounded-circle portrait-img col-9 mb-3" src="../assets/images/portrait.jpg">
+    <img class="rounded-circle portrait-img col-9 mb-3 mx-auto" src="../assets/images/portrait.jpg">
     <p class="" style="text-align: center;">{{ site.data.contact["profile"][language] }}</p>
 </div>
 <script>
