--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -4,7 +4,7 @@
   {%- assign title_language_key = "title_" | append: page.lang -%}
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light no-theme-switch">
-      <div class="container-fluid">
+      <div class="container">
         {% for language in site.available_languages %}
         {% if language != page.lang %}
         <a href="/{{ language }}" class="language_button">
