--- a/docs/_includes/contact.html
+++ b/docs/_includes/contact.html
@@ -20,7 +20,7 @@
                 <span class="username">{{ site.github_username| escape }}</span></a>
         </div>
     </div>
-    <img class="rounded-circle portrait-img col-9 mb-3 mx-auto" src="../assets/images/portrait.jpg">
+    <img class="rounded-circle portrait-img col-9 mb-3 mx-auto" src="{{ "/assets/images/portrait.jpg" | absolute_url }}">
     <p class="" style="text-align: center;">{{ site.data.contact["profile"][language] }}</p>
 </div>
 <script>
