--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -7,8 +7,8 @@
       <div class="container row justify-content-start">
         {% for language in site.available_languages %}
         {% if language != page.lang %}
-        <a href="{{ language | relative_url }}" class="language_button">
-          <button class="btn bg-dark text-light no-theme-switch">{{ site.data.languages["label"][language] }} {{ site.data.languages["icon"][language] }}</button>
+        <a href="{{ language | absolute_url }}" class="language_button">
+          <button class="btn bg-dark text-light no-theme-switch">{{ site.baseurl }}{{ site.data.languages["label"][language] }} {{ site.data.languages["icon"][language] }}</button>
         </a>
         {% endif %}
         {% endfor %}
