--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -3,16 +3,25 @@
   {%- assign page_paths = site.header_pages | default: default_paths -%}
   {%- assign title_language_key = "title_" | append: page.lang -%}
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light no-theme-switch">
-      <div class="container row justify-content-start">
+    <nav class="navbar navbar-text navbar-dark bg-dark text-light no-theme-switch" style="padding-left: 10px; padding-right: 10px;">
+      
         {% for language in site.available_languages %}
         {% if language != page.lang %}
-        <a href="{{ language | absolute_url }}" class="language_button">
-          <button class="btn bg-dark text-light no-theme-switch">{{ site.baseurl }}{{ site.data.languages["label"][language] }} {{ site.data.languages["icon"][language] }}</button>
+        <a href="{{ language | absolute_url }}">
+          <button class="btn bg-dark text-light border-light no-theme-switch">{{ site.baseurl }}{{ site.data.languages["label"][language] }} {{ site.data.languages["icon"][language] }}</button>
         </a>
         {% endif %}
         {% endfor %}
-      </div>
+        <a href="{{ site.aws_s3_url }}/{{ page.lang }}.pdf" Download>
+          <button class="btn bg-dark text-light border-light no-theme-switch">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-arrow-down" viewBox="0 0 16 16">
+              <path d="M8.5 6.5a.5.5 0 0 0-1 0v3.793L6.354 9.146a.5.5 0 1 0-.708.708l2 2a.5.5 0 0 0 .708 0l2-2a.5.5 0 0 0-.708-.708L8.5 10.293V6.5z"/>
+              <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5v2z"/>
+            </svg>
+            {{ site.data.ui["download_pdf"][page.lang] }}
+          </button>
+        </a>
+
     </nav>
   </div>
 </header>
