--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -194,6 +194,12 @@ a
     position: relative;
 }
 
+.navbar-header
+{
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 #lightSwitch {
     cursor: pointer;
 }
