--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -12,6 +12,7 @@
         </a>
         {% endif %}
         {% endfor %}
+        <div class="flex-fill"></div>
         <a href="{{ site.aws_s3_url }}/{{ page.lang }}.pdf" Download>
           <button class="btn bg-dark text-light border-light no-theme-switch">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-arrow-down" viewBox="0 0 16 16">
@@ -21,7 +22,11 @@
             {{ site.data.ui["download_pdf"][page.lang] }}
           </button>
         </a>
-
+        <a href="https://github.com/Wasta-Geek/curriculum-vitae" style="padding-left: 10px;">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 16">
+            <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z"/>
+          </svg>
+          {{ site.data.ui["go_to_source_code"][page.lang] }}
+      </a>
     </nav>
-  </div>
 </header>
