--- a/docs/_includes/contact.html
+++ b/docs/_includes/contact.html
@@ -20,21 +20,21 @@
                 <span class="username">{{ site.github_username| escape }}</span></a>
         </div>
     </div>
+    <img class="rounded-circle portrait-img col-9 mb-3 mx-auto" src="{{ "/assets/images/portrait.jpg" | absolute_url }}">
     {%- if site.seek_a_job -%}
-        <div class="mb-3 card bg-success text-light">
+        <div class="mb-3 card bg-dark text-light">
             <div class="card-body">
                 <div><b>{{ site.data.contact["availability_text"][language] }} : </b>{{ site.data.contact["availability_date"][language] }}</div>
                 <div><b>{{ site.data.contact["desired_job_text"][language] }} : </b>{{ site.data.contact["desired_job"][language] }}</div>
             </div>
         </div>
     {%- else -%}
-        <div class="mb-3 card bg-secondary text-light">
+        <div class="mb-3 card bg-secondary text-light d-print-none">
             <div class="card-body">
                 <div><b>{{ site.data.contact["availability_text"][language] }} : </b>{{ site.data.contact["not_available_text"][language] }}</div>
             </div>
         </div>
     {%- endif -%}
-    <img class="rounded-circle portrait-img col-9 mb-3 mx-auto" src="{{ "/assets/images/portrait.jpg" | absolute_url }}">
     <p class="" style="text-align: center;">{{ site.data.contact["profile"][language] }}</p>
 </div>
 <script>
