--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -8,7 +8,7 @@
         {% for language in site.available_languages %}
         {% if language != page.lang %}
         <a href="{{ language | absolute_url }}" class="me-auto">
-          <button class="btn bg-dark text-light border-light no-theme-switch language_button" style="background-image: url({{ "" | absolute_url }}assets/svg/{{ site.data.languages["icon"][language] }})">
+          <button class="btn bg-dark text-light border-light no-theme-switch language_button" style="background-image: url({{ "/assets/svg/" | absolute_url }}{{ site.data.languages["icon"][language] }})">
             {{ site.baseurl }}{{ site.data.languages["label"][language] }}
           </button>
         </a>
