--- a/docs/_includes/about_me.html
+++ b/docs/_includes/about_me.html
@@ -9,7 +9,7 @@
                 <h3 class="text-center">{{ site.data.about_me["languages_subsection"][language] }}</h3>
                 <ul>
                     {%- for language_object in site.data.about_me["languages_list"] -%}
-                    <li> <img class="flag_img_icon" src="{{ "" | absolute_url }}assets/svg/{{ language_object[1]['icon'] }}">
+                    <li> <img class="flag_img_icon" src="{{ "/assets/svg/" | absolute_url }}{{ language_object[1]['icon'] }}">
                         {{ language_object[1]["name"][language] }}
                         : {{ language_object[1]["skill"][language] }}</li>
                     {%- endfor -%}
