--- a/docs/_includes/skills.html
+++ b/docs/_includes/skills.html
@@ -31,12 +31,12 @@
             </ul>
         </div>
         <div class="col col-6">
-            <!-- <h3 class="text-center">{{ site.data.skills["frameworks_subsection"][language] }}</h3>
-            <ul>
-                {%- for framework in site.data.skills["frameworks_list"] -%}
-                <li>{{ framework }}</li>
-                {%- endfor -%}
-            </ul> -->
+        <h3 class="text-center">{{ site.data.skills["frameworks_subsection"][language] }}</h3>
+        <ul>
+            {%- for framework in site.data.skills["frameworks_list"] -%}
+            <li>{{ framework }}</li>
+            {%- endfor -%}
+        </ul>
         </div>
     </div>
 </div>
