--- a/docs/_includes/skills.html
+++ b/docs/_includes/skills.html
@@ -6,17 +6,17 @@
     <div class="row justify-content-evenly">
         <div class="col col-6">
             <h3 class="text-center">{{ site.data.skills["programming_languages_subsection"][language] }}</h3>
-            <ul class ="card-columns" style="column-count: 2;">
+            <ul class="card-columns" style="column-count: 2;">
                 {%- for program_language in site.data.skills["programming_languages_list"] -%}
                 <li>{{ program_language }}</li>
                 {%- endfor -%}
             </ul>
         </div>
         <div class="col col-6">
-            <h3 class="text-center">{{ site.data.skills["various_subsection"][language] }}</h3>
-            <ul class="align-self-center">
-                {%- for various_skill in site.data.skills["various_list"][language] -%}
-                <li>{{ various_skill }}</li>
+            <h3 class="text-center">{{ site.data.skills["frameworks_subsection"][language] }}</h3>
+            <ul>
+                {%- for framework in site.data.skills["frameworks_list"] -%}
+                <li>{{ framework }}</li>
                 {%- endfor -%}
             </ul>
         </div>
@@ -24,19 +24,19 @@
     <div class="row justify-content-evenly">
         <div class="col col-6">
             <h3 class="text-center">{{ site.data.skills["tools_subsection"][language] }}</h3>
-            <ul class ="card-columns" style="column-count: 2;">
+            <ul class="card-columns" style="column-count: 2;">
                 {%- for tool in site.data.skills["tools_list"] -%}
                 <li>{{ tool }}</li>
                 {%- endfor -%}
             </ul>
         </div>
         <div class="col col-6">
-        <h3 class="text-center">{{ site.data.skills["frameworks_subsection"][language] }}</h3>
-        <ul>
-            {%- for framework in site.data.skills["frameworks_list"] -%}
-            <li>{{ framework }}</li>
-            {%- endfor -%}
-        </ul>
+            <h3 class="text-center">{{ site.data.skills["hobby_project_subsection"][language] }}</h3>
+            <ul class="align-self-center">
+                {%- for hobby_project in site.data.skills["hobby_project_list"][language] -%}
+                <li>{{ hobby_project }}</li>
+                {%- endfor -%}
+            </ul>
         </div>
     </div>
 </div>
