--- a/docs/_includes/work_experiences.html
+++ b/docs/_includes/work_experiences.html
@@ -5,13 +5,13 @@
 {%- for work_entity in site.data.work_experiences["content"] -%}
 {%- assign company_name = work_entity[0] -%}
 {%- assign company_object = work_entity[1] -%}
-<div class="{% if company_object.print == false %}d-print-none{% endif %}">
+<div class="{% if company_object.print == false %}d-print-none{% endif %}" style="margin-top: 15px;">
     <h3>{{ company_object.title[language] }}</h3>
     <dl>
         {%- for work_subpart in company_object.description[language] -%}
-        <dt>{{ work_subpart.job_title }}</dt>
+        <dt style="margin-bottom: 10px">{{ work_subpart.job_title }}</dt>
         {%- for description_line in work_subpart.description -%}
-        <dd>{{ description_line }}</dd>
+        <dd style="margin-bottom: 2px">{{ description_line }}</dd>
         {%- endfor -%}
         {%- endfor -%}
     </dl>
