--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -17,7 +17,7 @@
 
     a
     {
-        color: white;
+        color: red !important;
     }
 
     .left_part_resume_content
@@ -145,6 +145,17 @@ html, body, main
     margin-top: 10px;
 }
 
+.about_me
+{
+    margin-top: 50px;
+}
+
+.portrait
+{
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+
 h2
 {
     font-weight: bold;
@@ -154,21 +165,29 @@ h2
 
 h3
 {
-    margin-bottom: 2.5px;
-    text-decoration: underline;
-    font-weight: 600;
+    margin-bottom: 5px;
+    font-weight: 700;
+}
+
+div:has(> h3:first-child) {
+    margin-top: 20px;
+}
+
+dd + dt {
+    margin-top: 10px;
 }
 
 dt
 {
-    font-weight: bold;
-    margin-bottom: 2.5px;
-    margin-top: 2.5px;
+    font-weight: 600;
+    font-style: italic;
+    margin-bottom: 5px;
+    margin-top: 5px;
 }
 
 dd
 {
-    margin: 0px 0px 0px 40px;
+    margin: 0px 0px 2px 25px;
 }
 
 dl
