Lower dt font-weight on print media

--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -47,6 +47,11 @@
     {
         margin: 0  !important;
     }
+
+    dt
+    {
+        font-weight: 500 !important;
+    }
 }
 
 @media (max-width: 850px)
