--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -18,6 +18,12 @@
     a
     {
         color: white;
+        text-decoration: none;
+    }
+
+    a.dark_link
+    {
+        color: black;
     }
 
     .left_part_resume_content
@@ -40,6 +46,11 @@
     html, body, main
     {
         margin: 0  !important;
+    }
+
+    dt
+    {
+        font-weight: 500 !important;
     }
 }
 
@@ -145,6 +156,17 @@ html, body, main
     margin-top: 10px;
 }
 
+.about_me
+{
+    margin-top: 50px;
+}
+
+.portrait
+{
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+
 h2
 {
     font-weight: bold;
@@ -154,21 +176,29 @@ h2
 
 h3
 {
-    margin-bottom: 2.5px;
-    text-decoration: underline;
-    font-weight: 600;
+    margin-bottom: 5px;
+    font-weight: 700;
+}
+
+div:has(> h3:first-child) {
+    margin-top: 20px;
+}
+
+dd + dt {
+    margin-top: 10px;
 }
 
 dt
 {
-    font-weight: bold;
-    margin-bottom: 2.5px;
-    margin-top: 2.5px;
+    font-weight: 600;
+    font-style: italic;
+    margin-bottom: 5px;
+    margin-top: 5px;
 }
 
 dd
 {
-    margin: 0px 0px 0px 40px;
+    margin: 0px 0px 2px 25px;
 }
 
 dl
